undid making entire accordion clickable due to issues on mobile

--- a/css/writing-style.css
+++ b/css/writing-style.css
@@ -39,11 +39,6 @@ body {
     text-align: left;
 }
 
-.card-header:hover {
-    cursor: pointer;
-    filter: brightness (40%);
-}
-
 .card-header-secondary {
     color: #7C7C7C;
     font-weight: 300;
